--- a/.github/workflows/ci_checks.yaml
+++ b/.github/workflows/ci_checks.yaml
@@ -20,16 +20,9 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
-      - name: pull_docker_image
-        run: docker pull gcr.io/cpp-projects/cpp-ci:1
-      - name: run_make
-        run: |
-          docker run -v `pwd`:/cpp-hocon gcr.io/cpp-projects/cpp-ci:1 /bin/bash -c "
-          wget https://github.com/puppetlabs/leatherman/releases/download/1.5.2/leatherman${{ matrix.options.leatherman_pkg_suffix }}.tar.gz &&
-          tar xzvf leatherman${{ matrix.options.leatherman_pkg_suffix }}.tar.gz --strip 1 -C / &&
-          cd /cpp-hocon &&
-          cmake ${{ matrix.options.cmake_extra_vars }} . &&
-          mkdir dest &&
-          make ${{ matrix.options.make_command }} DESTDIR=/cpp-hocon/dest VERBOSE=1 -j2 &&
-          { [[ '${{ matrix.options.coveralls }}' != 'ON' ]] || coveralls --gcov-options '\-lp' -r . -b . -e src -e vendor >/dev/null || true; }
-          "
+      - name: docker_pull_and_make
+        uses: ./.github/actions/docker_pull_and_make
+        with:
+          cmake_extra_vars: ${{ matrix.options.cmake_extra_vars }}
+          make_command: ${{ matrix.options.make_command }}
+          coveralls: ${{ matrix.options.coveralls }}
